# OpenPiScope

./: .gitignore  Cargo.toml  Justfile  build.rs  default-config.toml  open-pi-scope.service
proto/: open-pi-scope.proto
src/: alignment.rs  alpaca.rs  alt_az_driver.rs  api.rs  gnss.rs  helpers.rs  lib.rs  magnetic.rs  main.rs  mutex_box.rs  open_pi_scope.rs  stepper_axis.rs  stepper_motor.rs  storage.rs  telescope_position.rs
