[package]
name = "open-pi-scope"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
gpsd_proto = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.97"
critical-section = {version="1.2.0",features = ["std"]}
derivative = "2.2.0"
tonic = "0.12.3"
tonic-reflection = "0.12.3"
prost = "0.13"
world_magnetic_model = "0.2.0"
chrono = "0.4.40"
rppal = { version = "0.22.1", features = ["hal"] }
bno055 = { version = "0.4.0", features = ["serde", "std"] }
linux-embedded-hal = { version = "0.4"}
mint = { version = "0.5.9", features = ["serde"] }
nalgebra = "0.33.2"
toml_edit = { version = "0.22.24", features = ["serde"] }
static_cell = "2.1.0"

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12.3"
