[package]
name = "open-pi-scope"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
gpsd_proto = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
anyhow = "1.0.99"
critical-section = {version="1.2.0",features = ["std"]}
derivative = "2.2.0"
world_magnetic_model = "0.4.0"
chrono = "0.4.41"
rppal = { version = "0.22.1", features = ["hal"] }
bno055 = { version = "0.4.0", features = ["serde", "std"] }
linux-embedded-hal = { version = "0.4"}
mint = { version = "0.5.9", features = ["serde"] }
nalgebra = {version="0.34.0", features = ["serde-serialize"]}
toml_edit = { version = "0.23.4", features = ["serde"] }
static_cell = "2.1.1"
async-trait = "0.1.89"
ascom-alpaca = { version = "1.0.0-beta.3", features = ["server","telescope"] }
embedded-hal = "=1.0.0"
lazy_static = "1.5.0"
atomic_struct = {version="0.1.5", features = ["serde"]}
atomic_struct_core = {version="0.1.5", features = ["serde"]}
# OpenAPI (Swagger)
utoipa = { version = "5.4.0", features = ["axum_extras","debug"] }
utoipa-swagger-ui = {version="9.0.2", features = ["axum"] }
utoipa-axum = { version = "0.2.0", features = ["debug"] }
axum = "0.8.4"
